CompletionWidget: Fix scrollable-gutter in CSS-disabled clippable element
Bug: T351448

--- a/src/ui/styles/widgets/ve.ui.CompletionWidget.css
+++ b/src/ui/styles/widgets/ve.ui.CompletionWidget.css
@@ -19,6 +19,7 @@
 	/* The contained MenuSelectWidget is already clipped (T330401) */
 	/* TODO: This could be done in JS if OO.ui.ClippableElement provided a way to disable clipping */
 	overflow: hidden !important; /* stylelint-disable-line declaration-no-important */
+	scrollbar-gutter: auto;
 }
 
 .ve-ui-completionWidget .oo-ui-textInputWidget {
